--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Kwok Yun May <br />
 						Portfolio</h1>
-						<p> Aspiring Data Scientist well versed in Python, R, SQL, Tableau, Power BI and Excel.</p>
+						<p> Aspiring scientist well versed in Python, R, SQL, MATLAB, Tableau, Power BI and Excel.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -51,14 +51,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">September 29, 2022</span>
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile">Google Analytics Capstone Project<br />
 									</a></h2>
-									<p>In this project.....</p>
+									<p>Case Study 1: Cyclistic bike share analysis</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile" class="image main"><img src="images/Bikeshare.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -66,76 +65,50 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">September 30, 2022</span>
 										<h2><a href="#">Covid 19 Data Exploration<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/covid19.png" alt="" /></a>
 									<p>In this project we use SQL Server to explore Singapore's COVID 19 Data.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">October 1, 202</span>
 										<h2><a href="#">Tableau Dashboards<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Tableau Dashboards for Projects on COVID 19, blablabla upcoming~</p>
+									<a href="#" class="image fit"><img src="images/tableau.png" alt="" /></a>
+									<p>Tableau Dashboards for Projects on COVID 19</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">October 2, 2022</span>
-										<h2><a href="#">Future Projects<br />
+										<h2><a href="#">IBM Quantum project<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>In midst of getting one~</p>
+									<a href="#" class="image fit"><img src="images/ibm.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">October 3, 2022</span>
-										<h2><a href="#">Future Projects<br />
+										<h2><a href="#">Python and Qiskit<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Coming soon~</p>
+									<a href="#" class="image fit"><img src="images/qiskit.png" alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 							</section>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-								
-						
 						<section class="split contact">
 							<section class="alt">
 								<h3></h3>
