--- a/generic.html
+++ b/generic.html
@@ -50,6 +50,8 @@
 		.image.main img {
   width: 80%;
   margin: 20px 0;
+  margin-bottom: 10px;
+  margin-top: -20px;
 }
 	.image.main img {
   width: 100%;
