--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
+	
 	<body class="is-preload">
 
+		
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
@@ -51,62 +52,133 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile">Google Analytics Capstone Project<br />
+									<h2><a href="https://drive.google.com/drive/folders/1Mr5H8hz29ihRMvAXZqpmq0-r3bjRnXFk?usp=drive_link">NTU Laboratory Experiment 1<br />
 									</a></h2>
-									<p>Case Study 1: Cyclistic bike share analysis</p>
+									<p>Quantum single-photon source generation and characterisation </p>
 								</header>
-								<a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile" class="image main"><img src="images/Bikeshare.jpg" alt="" /></a>
+								<a href="https://drive.google.com/drive/folders/1Mr5H8hz29ihRMvAXZqpmq0-r3bjRnXFk?usp=drive_link" class="image main"><img src="images/SinglePhoton.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile" class="button large">View Project</a></li>
+									<li><a href="https://drive.google.com/drive/folders/1Mr5H8hz29ihRMvAXZqpmq0-r3bjRnXFk?usp=drive_link" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="#">Covid 19 Data Exploration<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/covid19.png" alt="" /></a>
-									<p>In this project we use SQL Server to explore Singapore's COVID 19 Data.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Tableau Dashboards<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/tableau.png" alt="" /></a>
-									<p>Tableau Dashboards for Projects on COVID 19</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">IBM Quantum project<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/ibm.png" alt="" /></a>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Python and Qiskit<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/qiskit.png" alt="" /></a>
-									<p></p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Coming Soon</a></li>
-									</ul>
-								</article>
+						<section class="posts">
+
+    <!-- NTU Laboratory Project -->
+    <article>
+        <header>
+            <h2><a href="https://drive.google.com/drive/folders/1CPg34d4cu0ovSj4Rl2y2GLnXIf1Clh73?usp=drive_link">
+                NTU Lab Experiment 2</a></h2>
+            <p>2D Hybrid Halide Perovskite</p>
+        </header>
+        <a href="https://drive.google.com/drive/folders/1CPg34d4cu0ovSj4Rl2y2GLnXIf1Clh73?usp=drive_link" class="image main">
+            <img src="images/0.png" alt="Google Analytics Capstone Project" />
+        </a>
+        <ul class="actions special">
+            <li><a href="https://drive.google.com/drive/folders/1CPg34d4cu0ovSj4Rl2y2GLnXIf1Clh73?usp=drive_link" class="button large">View Project</a></li>
+        </ul>
+    </article>
+
+	<!-- SP Python Project 1 -->
+    <article>
+        <header>
+            <h2><a href="https://drive.google.com/drive/folders/1eLN49fx5XtJcJO_WrcdNNlT6XND_y-A4?usp=drive_link">
+                SP Python Project 1</a></h2>
+            <p>Case Study: How had Covid-19 affected HDB buyers in Singapore?</p>
+        </header>
+        <a href="https://drive.google.com/drive/folders/1eLN49fx5XtJcJO_WrcdNNlT6XND_y-A4?usp=drive_link" class="image main">
+            <img src="images/HDB.png" alt="Google Analytics Capstone Project" />
+        </a>
+        <ul class="actions special">
+            <li><a href="https://drive.google.com/drive/folders/1eLN49fx5XtJcJO_WrcdNNlT6XND_y-A4?usp=drive_link" class="button large">View Project</a></li>
+        </ul>
+    </article>
+
+	<!-- SP Python Project 2 -->
+    <article>
+        <header>
+            <h2><a href="https://drive.google.com/drive/folders/1RkulXuQdN8NC9HWm4JzCPeh9mOpFn0ic?usp=drive_link">
+                SP Python Project 2</a></h2>
+            <p>Case Study: How has climate change affected Singapore?</p>
+        </header>
+        <a href="https://drive.google.com/drive/folders/1RkulXuQdN8NC9HWm4JzCPeh9mOpFn0ic?usp=drive_link" class="image main">
+            <img src="images/Programming2.png" alt="Google Analytics Capstone Project" />
+        </a>
+        <ul class="actions special">
+            <li><a href="https://drive.google.com/drive/folders/1RkulXuQdN8NC9HWm4JzCPeh9mOpFn0ic?usp=drive_link" class="button large">View Project</a></li>
+        </ul>
+    </article>
+
+	<!-- SP Data Analytics Project -->
+    <article>
+        <header>
+            <h2><a href="https://drive.google.com/drive/folders/1Ccb0mWWsAqACAgc-Q4EITg_RlgE-2r8F?usp=drive_link">
+                SP Data Analytics Project</a></h2>
+            <p>Research Question: Is there a difference in the average life expectancy for female and male between Singapore and Malaysia?</p>
+        </header>
+        <a href="https://drive.google.com/drive/folders/1Ccb0mWWsAqACAgc-Q4EITg_RlgE-2r8F?usp=drive_link" class="image main">
+            <img src="images/SGvsMS_LE.png" alt="SP Data Analytics Project" />
+        </a>
+        <ul class="actions special">
+            <li><a href="https://drive.google.com/drive/folders/1Ccb0mWWsAqACAgc-Q4EITg_RlgE-2r8F?usp=drive_link" class="button large">View Project</a></li>
+        </ul>
+    </article>
+
+	<!-- Google Analytics Capstone Project -->
+	<article>
+		<header>
+			<h2><a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile">
+				Google Analytics Capstone Project</a></h2>
+			<p>Case Study 1: Cyclistic bike share analysis</p>
+		</header>
+		<a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile" class="image main">
+			<img src="images/Bikeshare.jpg" alt="Google Analytics Capstone Project" />
+		</a>
+		<ul class="actions special">
+			<li><a href="https://www.kaggle.com/datasets/kathleenkym/google-data-analytics-case-study-1?datasetId=3097127&sortBy=dateRun&tab=profile" class="button large">View Project</a></li>
+		</ul>
+	</article>
+
+    <!-- Covid 19 Data Exploration -->
+    <article>
+        <header>
+            <h2><a href="#">Covid 19 Data Exploration</a></h2>
+            <p>In this project, we use SQL Server to explore Singapore's COVID-19 data.</p>
+        </header>
+        <a href="#" class="image main">
+            <img src="images/covid19.png" alt="Covid 19 Data Exploration" />
+        </a>
+        <ul class="actions special">
+            <li><a href="#" class="button large">Coming Soon</a></li>
+        </ul>
+    </article>
+
+	<!-- Tableau Dashbaords -->
+	<article>
+		<header>
+			<h2><a href="#">Tableau Dashboards</a></h2>
+			<p></p>
+		</header>
+		<a href="#" class="image fit"><img src="images/tableau.png" alt="" /></a>
+		<ul class="actions special">
+			<li><a href="#" class="button">Coming Soon</a></li>
+		</ul>
+	</article>
+
+	<!-- Python and Qiskit -->
+	<article>
+		<header>
+			<h2><a href="#">Python and Qiskit<br />
+			</a></h2>
+		</header>
+		<a href="#" class="image fit"><img src="images/qiskit.png" alt="" /></a>
+		<p></p>
+		<ul class="actions special">
+			<li><a href="#" class="button">Coming Soon</a></li>
+		</ul>
+	</article>
+	
 							</section>
 
 						<section class="split contact">
